infrastructure/apps/services/capacitor/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: capacitor-dashboard
  namespace: flux-system
spec:
  parentRefs:
    - name: main-gateway
      namespace: metallb-system
      sectionName: https
  hostnames:
    - "capacitor.homelab.taylandogan.info"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: capacitor
          port: 9000
