infrastructure/apps/services/capacitor/network-rule.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: allow-envoy-to-capacitor
  namespace: flux-system
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/instance: capacitor
  ingress:
  - fromEndpoints:
    - matchLabels:
        app.kubernetes.io/name: envoy
        gateway.envoyproxy.io/owning-gateway-name: main-gateway
        gateway.envoyproxy.io/owning-gateway-namespace: envoy-gateway-system
        io.kubernetes.pod.namespace: envoy-gateway-system
    toPorts:
    - ports:
      - port: "9000"
        protocol: TCP
